# chess-opening-trees

./: .gitignore  README.md  config-example.json  nginx-example.conf  pyproject.toml  run_wsgi.py  tree.py
chess_opening_trees/: tree_builder.py
chess_opening_trees/parser/: pgn_parser.py
chess_opening_trees/repository/: database.py
chess_opening_trees/service/: opening_tree.py
docs/: 01-overview.md  02-database-structure.md  03-pruning.md  05-query.md
opening_tree/: tree.py  wsgi.py
opening_tree/commands/: build.py  normalise_fens.py  prune.py  query.py  serve.py
opening_tree/maintenance/normalise_fens/: __init__.py  command.py
opening_tree/maintenance/pruning/: graph_analyser.py  repository.py  tree_pruner.py  workspace.py
opening_tree/parser/: pgn_parser.py
opening_tree/repository/: database.py
opening_tree/service/: api.py  fen_utils.py  opening_tree.py
opening_tree/tests/: test_fen_utils.py  test_opening_tree_service.py
server/: README.md  package.json  tsconfig.json
server/src/: config.ts  router.ts  server.ts  types.ts
server/src/repository/: openingTreeRepository.ts
server/src/services/: openingTreeService.ts
server/src/utils/: fen.test.ts  fen.ts
