[project]
name = "chess-opening-trees"
version = "0.1.0"
description = "A Python tool to generate and analyze chess opening trees from PGN files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opening_tree"]
